[tool.poetry]
name = "mmprofiler"
version = "0.1.0"
package-mode = false
description = "Mangrove/Market Maker Profiler"
authors = ["Guillaume Garchery <polluxxx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "1.23.4"
pandas = "1.5.1"
plotly = "5.11.0"
sortedcontainers = "2.4.0"
scipy = "1.9.3"
streamlit = "1.14.0"
numerize = "0.12"
statsmodels = "0.13.5"
scikit-learn = "1.1.3"
mlinsights = "0.3.649"
altair = "4.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
black = {version = "22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
